Apply FindBugs warning